<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.capou.application.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.capou.application.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />


    <fragment
        android:id="@+id/navigation_detail"
        android:name="com.capou.application.ui.details.DetailsFragment"
        android:label="@string/title_detail"
        tools:layout="@layout/fragment_details" />


    <fragment
        android:id="@+id/navigation_product"
        android:name="com.capou.application.ui.aliments.fragments.HomeFragmentAliment"
        android:label="@string/title_aliment"
        tools:layout="@layout/fragment_home_aliment" />

    <fragment
        android:id="@+id/navigation_home_maraicher"
        android:name="com.capou.application.ui.maraicher.homeMaraicher.MaraicherHomeFragment"
        android:label="@string/title_home_maraicher"
        tools:layout="@layout/fragment_home_maraicher" />

    <fragment
        android:id="@+id/navigation_list_aliment_maraicher"
        android:name="com.capou.application.ui.maraicher.listAlimentMaraicher.MaraicherListAlimentFragment"
        android:label="@string/title_list_aliment_maraicher"
        tools:layout="@layout/fragment_list_aliment_maraicher" />

    <fragment
        android:id="@+id/navigation_maraicher_profile"
        android:name="com.capou.application.ui.maraicher.profileMaraicher.MaraicherProfileFragment"
        android:label="@string/title_maraicher_profile"
        tools:layout="@layout/fragment_maraicher_profile" />

    <fragment
        android:id="@+id/navigation_my_food"
        android:name="com.capou.application.ui.my_food.view.MyFoodFragment"
        android:label="Mes Aliments"
        tools:layout="@layout/my_food_fragment" />

</navigation>