<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" >
>

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        app:showAsAction="ifRoom"
        android:title="@string/title_home" />


    <item
        android:id="@+id/navigation_product"
        android:icon="@drawable/ic_baseline_local_dining_24"
        android:title="@string/title_aliment" />

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_dashboard" />



    <item
        android:id="@+id/navigation_list_aliment_maraicher"
        android:icon="@drawable/ic_baseline_maraicher_dining_24"
        android:title="@string/title_list_aliment_maraicher" />

    <!--item
        android:id="@+id/navigation_home_maraicher"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home_maraicher" /-->

    <item
        android:id="@+id/navigation_maraicher_profile"
        android:icon="@drawable/ic_baseline_account_circle_24"
        android:title="@string/title_maraicher_profile" />
</menu>