<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.maraicher.addProduct.view.AddProduct">


    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        style="@style/TextAppearance.MaterialComponents.Headline4"
        android:padding="6dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/images"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        app:layout_constraintTop_toBottomOf="@id/title"/>
    <TextView
        android:id="@+id/pickupPointLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/select_pickup_point"
        style="@style/TextAppearance.MaterialComponents.Subtitle1"
        app:layout_constraintTop_toBottomOf="@id/images"
        app:layout_constraintBottom_toTopOf="@id/add_product"/>
    <Spinner
        android:id="@+id/pickupPoint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:layout_constraintTop_toBottomOf="@id/pickupPointLabel"
        />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/add_product"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_gravity="center_horizontal"
        android:backgroundTint="@color/teal_200"
        android:text="@string/add_product"
        app:layout_constraintTop_toBottomOf="@id/pickupPoint"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>